fix(navbar):Fixed dark mode and logo image on navbar component

--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,18 @@
 }
 
 html {
-  @apply transition-colors duration-300 bg-white dark:bg-gray-900 text-gray-900 dark:text-white ;
+  @apply bg-white text-gray-900 
 }
 
 html.light{
-  @apply transition-colors duration-300 bg-white text-gray-900 ;
+  @apply transition-colors duration-300 bg-white text-gray-900;
 }
+
+html.dark {
+  @apply transition-colors duration-300  dark:bg-gray-900 dark:text-white;
+}
+
+
 
 :root {
   
